2007-02-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/*.{c,h}:
	Migration to C++

2007-02-20  <lizard@blue.dyn-o-saur.com>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-smb-auth.c:
	* src/gnome-cmd-smb-auth.h:
	* src/main.c:
	Added SMB authentication

2007-02-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.c:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-path.c:
	* src/gnome-cmd-plain-path.c:
	* src/gnome-cmd-python-plugin.c:
	* src/useractions.c:
	Fix for active/inactive dir paths passed to python plugins

2007-02-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags-doc.c:
	* src/tags/gnome-cmd-tags-doc.h:
	* src/tags/gnome-cmd-tags-exif.c:
	* src/tags/gnome-cmd-tags-exif.h:
	* src/tags/gnome-cmd-tags-icc.c:
	* src/tags/gnome-cmd-tags-icc.h:
	* src/tags/gnome-cmd-tags-id3.c:
	* src/tags/gnome-cmd-tags-id3.h:
	* src/tags/gnome-cmd-tags-iptcdata.c:
	* src/tags/gnome-cmd-tags-iptcdata.h:
	* src/tags/gnome-cmd-tags-libs.h:
	Define gcmd_tags_*_is_supported() as macros

2007-02-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-exif.c:
	* src/tags/gnome-cmd-tags-exif.h:
	* src/tags/gnome-cmd-tags-icc.c:
	* src/tags/gnome-cmd-tags-icc.h:
	* src/tags/gnome-cmd-tags-iptcdata.c:
	* src/tags/gnome-cmd-tags-iptcdata.h:
	* src/tags/gnome-cmd-tags-libs.c:
	* src/tags/gnome-cmd-tags-libs.h:
	* src/tags/gnome-cmd-tags.c:
	Split gcmd_tags_*() functions into separate files

2007-02-14  Koos Jan Niesink  <kjniesink@yahoo.co.uk>

	* src/tags/gnome-cmd-tags.c:
	Fix build error (partially revert commit #697)

2007-02-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/libgviewer/Makefile.am:
	* tests/gviewer/Makefile.am:
	Link libgviewer library statically

2007-02-03  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file.c: